syntax = "proto3";
package proto;
option java_package = "com.conorjc.proto";
option java_multiple_files = true;

message Lights {
    bool status = 1;
}
message LightStatusRequest {
    Lights status = 1;
}
message LightStatusResponse {
    string result = 1;
}

//define and name service - make readable
service LightsService{
    rpc LightService(LightStatusRequest) returns (LightStatusResponse) {};
}